# BuildingSpaceGenerator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TRACK_A_IMPLEMENTATION.md  TRACK_B_DELIVERY_CHECKLIST.md  TRACK_B_IMPLEMENTATION.md  TRACK_C_QUICKSTART.md  architectural-review-brief.md  architecture.md  change-dispatch-architecture.md  open-source-survey.md  test_track_b.py
buildingspacegen/: __init__.py  pipeline.py  pyproject.toml
buildingspacegen/buildinggen/: __init__.py  api.py
buildingspacegen/buildinggen/archetypes/: __init__.py  archetype.py  registry.py
buildingspacegen/buildinggen/generators/: __init__.py  base.py  bsp.py  layout_constraints.py
buildingspacegen/buildinggen/postprocess/: __init__.py  door_placement.py
buildingspacegen/buildingviz/: __init__.py
buildingspacegen/buildingviz/frontend/: index.html
buildingspacegen/buildingviz/renderers/: __init__.py  glyphs.py  matplotlib_2d.py
buildingspacegen/buildingviz/server/: __init__.py  app.py
buildingspacegen/cli/: __init__.py  main.py
buildingspacegen/core/: __init__.py  device.py  enums.py  geometry.py  links.py  model.py  serialization.py
buildingspacegen/data/archetypes/: large_office.yaml  medium_office.yaml  warehouse.yaml
buildingspacegen/pathloss/: __init__.py  api.py  geometry.py  graph.py  materials.py  radio.py
buildingspacegen/pathloss/models/: README.md  __init__.py  base.py  multiwall.py
buildingspacegen/sensorplacer/: __init__.py  api.py  config.py  placer.py  rules.py
buildingspacegen/sources/: __init__.py
buildingspacegen/tests/: __init__.py
(+58 files in other folders)
